# video-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  videos.json
video_analysis/: core.py  extractor.py  prompts.py  video_db.py
